# weaves

./: Makefile
contrib/weaves/: Makefile
contrib/weaves/dists/: README  doxygenf.msi
contrib/weaves/q4r/: DESCRIPTION  NAMESPACE
contrib/weaves/q4r/R/: q4r.R  zzz.R
contrib/weaves/q4r/man/: open.q.Rd  q4r.Rd
contrib/weaves/q4r/src/: Makevars  base.c  cleanup
contrib/weaves/qdoc/: ChangeLog  INSTALL  Makefile.in  README  config.guess  config.h.in  configure  missing  qdoc.spec.in  system.h
contrib/weaves/qdoc/cfg/: Makefile.in  dev.doxy.in  qdoc.texinfo
contrib/weaves/qsys/: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  autogen.sh  configure  configure.ac  configure.in  index.cpp  qsys.info  qsys.lsm.in  qsys.texinfo
contrib/weaves/qsys/lib2/: Makefile.am
contrib/weaves/qsys/smet/: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  egex.info  egex.texinfo  system.h  xmalloc.c
contrib/weaves/qsys/smet/examples/: Makefile.am  Makefile.in  egcrc.q  smet.txt  t1tot2.csv  t2.csv
contrib/weaves/qsys/smet/lib/: Makefile.am  Makefile.in
contrib/weaves/qsys/smet/m4/: gnulib-cache.m4  gnulib-comp.m4
contrib/weaves/qsys/smet/regex/: Makefile.am  Makefile.in  README  egex.c  egex.sh  egex0.c  egex1.c  egex1.q  kish.c  kish.h  mygrep.c  regex.q.in  smet.sh  version-etc-fsf.c
contrib/weaves/qsys/smet/test/: Makefile.in  README  egex.texinfo  egexm.c  mygrep.c
contrib/weaves/qsys/smet/time0/: Makefile.am  Makefile.in  README  time0.c  time0.sh  time01.c  time01.sh  time01t.q  time0t.c
contrib/weaves/qsys/src/: Makefile.am  Makefile.in  Qp.in  Qs.in  commander.q  csvguess.q  darwin8.0.q  exit0.q  fctryc.q  fctryc0.q  help.q  log.q  odbc.k  q.rc  q.rc.in  qsys-config.in  site.q  trader-cull.q  trdr.cpp  trdr.q  trdrc.q
contrib/weaves/tools/: ChangeLog  INSTALL  Makefile.am  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  qtools.c  qtools.spec.in  qtools.texinfo  xmalloc.c
contrib/weaves/tools/doxygen0/: Makefile.am  example2.q  fdoxy  mtoc.l  qoxygen.l  qoxygen2.l  rtoc1.c  rtocc2.cc
contrib/weaves/tools/emacs/: README  init-01.el  q-mode.el
contrib/weaves/tools/m4/: gnulib-cache.m4
contrib/weaves/tools/qoxygen/: Makefile  Makefile.am  R-sample.R  R-sample1.c  README  example.c  lex.hh  mtoc.c  qoxygen2.l  rtoc.1  rtoc.l  rtocc1.cc  rtocc2.cc  string0.cc  system.h
contrib/weaves/tools/r2q/: README.txt  Rprofile
contrib/weaves/tools/xemacs/: commander.q  kdbp-mode.el
contrib/weaves/weaves/qsys/: ChangeLog  Makefile.in  configure.in  qsys.c  qsys.spec.in  xmalloc.c
contrib/weaves/weaves/qsys/src/: Makefile.am  linux-gnu.q  tester.q
dists/: README  qoxygen.msi
q4r/: BinaryFiles
q4r/R/: q4r.R  zzz.R
q4r/man/: q4r.Rd
q4r/src/: Makevars  base.c  k.h
qdoc/: Makefile.am  Makefile.in  README  aclocal.m4  config.sub  configure  configure.in  expander.sh  index.cpp.sample  install-sh  qdoc.1  qdoc.c  qdoc.info  qdoc.lsm.in  xmalloc.c
qdoc/cfg/: Makefile.am  warn.doxi
qsys/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  autogen.sh  configure.ac  configure.in
qsys/smet/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
qsys/smet/examples/: Makefile.am  egcrc.sh  names.sh
qsys/smet/lib/: Makefile.am  Makefile.in
qsys/smet/m4/: gnulib-cache.m4  gnulib-comp.m4
qsys/smet/regex/: Levenshtein.c  Makefile.am  Makefile.in  README  egex.c  egex.q  egex0.h  egex1.c  egex1.q  egext.c  k.h  regex.q.in  smet.q  smetrics.c
qsys/smet/test/: Makefile.am  egex.info  egex.sh  mygrep.c  mygrep.sh  regexpr.c  regexpr.sh
qsys/smet/time0/: Makefile.am  Makefile.in  README  time0.h  time0.q.in  time01.c  time01t.q  time0t.c
qsys/src/: Makefile.am  Qp.in  commander.q  csvguess.q  darwin8.0.q  fctry.q  fctryc.q  fctrys.q  help.q  log.q  q.rc.in  qsys-config  site.q  sys.q  tester.q  trader-cull.q  trdr.cpp  trdr.q  trdrc.q  use-q.in  weaves.q
tools/: AUTHORS  Makefile.am  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  qtools.1  qtools.lsm.in  system.h
tools/autom4te.cache/: output.1  requests  traces.0  traces.1
tools/doxygen0/: Makefile.am  R-sample1.R  README  example2.q  mtoc.l  qoxygen2.l  rtoc.l  rtoc1.c  tester  xmalloc.c
tools/doxygen0/Setup/: Setup.vdproj
tools/doxygen0/benchmark_example/: Makefile  benchmark.q  qoxygen1.sh
tools/doxygen0/filters0/: qoxygen.vcproj
tools/doxygen0/mtoc0/: doxygen.conf  doxygen.doxi  tsingleton.m
tools/doxygen0/simple_example/: Makefile  doxygen.doxo
tools/doxygen0/style/: Makefile  doxygen.conf  kx_latex_titlepage.sty  web.css
tools/doxygen0/style/dblatex/latex/contrib/db2latex/: db2latex.sty  param.xsl
tools/doxygen0/style/dblatex/latex/scripts/: runpdflatex
tools/doxygen0/style/dblatex/latex/style/: dbk_callout.sty  dbk_headfoot.sty  dbk_hyper.sty  dbk_locale.sty  dbk_table.sty  dbk_title.sty
tools/doxygen0/style/fonts/: couri.xml  gothicbi.xml
tools/emacs/: README  kdbp-mode.el  q-minor-mode.el
tools/m4/: gnulib-cache.m4
tools/qoxygen/: Makefile.am  README  doxytest.m  example.c  example2.c  mtoc.c  mtoc.info  mtoc.l  readme.txt  rtocc.l
tools/qoxygen/Setup/: Setup.vdproj
tools/qoxygen/benchmark_example/: doxygen.conf
tools/qoxygen/qoxygen/: qoxygen.sln
tools/qoxygen/style/: Makefile  doxygen.conf
tools/qoxygen/style/dblatex/latex/contrib/example/: dbsimple.sty
tools/qoxygen/style/dblatex/latex/scripts/: runlatex
tools/qoxygen/style/dblatex/latex/style/: dbk_changebar.sty  dbk_core.sty  dbk_revision.sty  docbook.sty
tools/qoxygen/style/fonts/: arial.xml  arialbi.xml  courbd.xml  gothic.xml  gothici.xml
tools/r2q/: Makefile.orig  kdbplus.R  r.k  r2q.c
tools/xemacs/: README
weaves/qsys/: NEWS  qsys.1  system.h
weaves/qsys/smet/: configure  egex.lsm.in  egex.spec.in
weaves/qsys/smet/examples/: Makefile.in  t1tot2.csv
weaves/qsys/smet/m4/: gnulib-cache.m4
weaves/qsys/smet/regex/: Levenshtein1.h  Makefile.in  egex.sh  (+3 more)
weaves/qsys/src/: darwin8.0.q  use-q
(+56 files in other folders)
