dnl Process this file with autoconf to produce a configure script.

AC_INIT(qoxygen/rtocc1.cc)
AC_CONFIG_AUX_DIR([config])
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(rtoc, 0.1.1)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER([config.h lib/gnulib.h])

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
gl_EARLY
AC_PROG_CXX
AC_PROG_AWK
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB

gl_INIT

AC_PATH_PROG(CCPATH,$CC)
AC_PATH_PROG(DOXYGEN,doxygen)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)
    
dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_LIB(y, main)
AC_CHECK_LIB(fl, yywrap)

# Checks for libraries.
# Replace `main' with a function in -lm
AC_CHECK_LIB(m, round)

AC_OUTPUT([Makefile 
lib/Makefile
qoxygen/Makefile 
qtools.lsm 
qtools.spec])
